--- a/app/styles/projects.scss
+++ b/app/styles/projects.scss
@@ -1,3 +1,19 @@
+#projects {
+  img {
+    width: 100%; 
+    height: auto;
+  }
+}
+
+#case-study {
+  img {
+    width: 100%; 
+    height: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+}
+
 .project-container {
 	padding-bottom: 40px;
 	.project {
